[gd_scene load_steps=8 format=3 uid="uid://chsai2e4355v7"]

[ext_resource type="Script" path="res://scripts/cards/attack_card.gd" id="1_pbjga"]
[ext_resource type="PackedScene" uid="uid://bn5p6wefqllmy" path="res://prefabs/commands/attack_command.tscn" id="2_igp75"]
[ext_resource type="ArrayMesh" uid="uid://dlhsjbeirjpup" path="res://models/plane.obj" id="3_qmr5a"]
[ext_resource type="Material" uid="uid://be2f1eln4dd12" path="res://materials/simple_green.tres" id="4_177ns"]
[ext_resource type="PackedScene" uid="uid://cnf4hgykiyqlh" path="res://prefabs/visual_effects/attack_highlight.tscn" id="5_1l3sm"]
[ext_resource type="PackedScene" uid="uid://dp0vrodr3vgiv" path="res://prefabs/text.tscn" id="6_4j8wa"]

[sub_resource type="BoxShape3D" id="BoxShape3D_67anj"]
size = Vector3(1, 0.0610962, 1)

[node name="2die" type="StaticBody3D"]
script = ExtResource("1_pbjga")
_name = "2-Die"
_command_prefab = ExtResource("2_igp75")

[node name="small_view" type="Node3D" parent="."]

[node name="mesh" type="MeshInstance3D" parent="small_view"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -0.423152)
mesh = ExtResource("3_qmr5a")
surface_material_override/0 = ExtResource("4_177ns")

[node name="full_view" type="Node3D" parent="."]

[node name="attack_pattern" type="Node3D" parent="full_view"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0.0432857, -0.475272)

[node name="highlight_attack" parent="full_view/attack_pattern" instance=ExtResource("5_1l3sm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="highlight_attack2" parent="full_view/attack_pattern" instance=ExtResource("5_1l3sm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="mesh" type="MeshInstance3D" parent="full_view"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.53674e-07, -0.425539)
mesh = ExtResource("3_qmr5a")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("4_177ns")

[node name="name_text" parent="full_view" instance=ExtResource("6_4j8wa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.742167)

[node name="damage_text" parent="full_view" instance=ExtResource("6_4j8wa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.115396)

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00234985, -0.426)
shape = SubResource("BoxShape3D_67anj")
